NEW:add some chinese translations
Change-Id: I59215ab8852cf617b7ce78fe6f529f15185ea29c

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-24 09:19+0800\n"
+"POT-Creation-Date: 2022-11-30 20:15+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1515,6 +1515,23 @@ msgid ""
 "last shutdown."
 msgstr ""
 
+msgid "Update remaining capacity"
+msgstr ""
+
+msgid ""
+"The AMS will estimate Bambu filament's remaining capacity after the filament "
+"info is updated. During printing, remaining capacity will be updated "
+"automatically."
+msgstr ""
+
+msgid "AMS auto switch filament"
+msgstr ""
+
+msgid ""
+"AMS switches to the same type of filament automatically when the current "
+"filament runs out."
+msgstr ""
+
 msgid "File"
 msgstr ""
 
@@ -2028,9 +2045,6 @@ msgstr ""
 msgid "Total"
 msgstr ""
 
-msgid "Filamet"
-msgstr ""
-
 msgid "Travel"
 msgstr ""
 
@@ -2299,6 +2313,21 @@ msgid "Timelapse"
 msgstr ""
 
 msgid "Monitoring Recording"
+msgstr ""
+
+msgid "Virtual Camera"
+msgstr ""
+
+msgid "Resolution"
+msgstr ""
+
+msgid "Show 'Streaming Video' guide page."
+msgstr ""
+
+msgid "720p"
+msgstr ""
+
+msgid "1080p"
 msgstr ""
 
 msgid "ConnectPrinter(LAN)"
@@ -2741,11 +2770,6 @@ msgstr ""
 msgid "Information"
 msgstr ""
 
-msgid ""
-"Virtual camera is started.\n"
-"Press 'OK' to navigate the guide page of 'Streaming video of Bambu Printer'."
-msgstr ""
-
 msgid "Playing..."
 msgstr ""
 
@@ -2864,7 +2888,13 @@ msgstr ""
 msgid "Camera"
 msgstr ""
 
-msgid "Virtual Camera"
+msgid "SD Card"
+msgstr ""
+
+msgid "SD Card Abnormal"
+msgstr ""
+
+msgid "Camera Setting"
 msgstr ""
 
 msgid "Printing Progress"
@@ -2924,6 +2954,15 @@ msgstr ""
 msgid "Cloud Slicing..."
 msgstr ""
 
+msgid "Please heat the nozzle to above 170 degree before loading filament."
+msgstr ""
+
+msgid "Still unload"
+msgstr ""
+
+msgid "Still load"
+msgstr ""
+
 msgid ""
 "Cannot read filament info: the filament is loaded to the tool head,please "
 "unload the filament and try again."
@@ -2942,6 +2981,9 @@ msgid "Sport"
 msgstr ""
 
 msgid "Ludicrous"
+msgstr ""
+
+msgid "Can't start this without SD card."
 msgstr ""
 
 msgid "Failed to connect to the server"
@@ -3787,6 +3829,15 @@ msgstr ""
 msgid "Project-inside presets"
 msgstr ""
 
+msgid "Add/Remove filaments"
+msgstr ""
+
+msgid "Add/Remove materials"
+msgstr ""
+
+msgid "Add/Remove printers"
+msgstr ""
+
 msgid "Slice all plate to obtain time and filament estimation"
 msgstr ""
 
@@ -4008,6 +4059,12 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
+msgid "Cannot send the print task when the printer need force upgrading."
+msgstr ""
+
+msgid "Errors"
+msgstr ""
+
 msgid ""
 "Please check the following infomation and click Confirm to continue sending "
 "print:\n"
@@ -4017,6 +4074,10 @@ msgid ""
 "The printer type used to generate G-code is not the same type as the "
 "currently selected physical printer. It is recommend to re-slice by "
 "selecting the same printer type.\n"
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid "The %s filament is too soft to be used with the AMS"
 msgstr ""
 
 msgid ""
@@ -4434,6 +4495,11 @@ msgid "General"
 msgstr ""
 
 msgid "Capabilities"
+msgstr ""
+
+msgid ""
+"The P1P printer is not support smooth timelapse, it will not transform the "
+"timelapse changes."
 msgstr ""
 
 msgid "Show all presets (including incompatible)"
@@ -5625,6 +5691,12 @@ msgstr ""
 msgid "Hilbert Curve"
 msgstr ""
 
+msgid "Archimedean Chords"
+msgstr ""
+
+msgid "Octagram Spiral"
+msgstr ""
+
 msgid "Bottom surface pattern"
 msgstr ""
 
@@ -5878,6 +5950,12 @@ msgid "Honeycomb"
 msgstr ""
 
 msgid "Adaptive Cubic"
+msgstr ""
+
+msgid "3D Honeycomb"
+msgstr ""
+
+msgid "Support Cubic"
 msgstr ""
 
 msgid "Lightning"
@@ -6335,9 +6413,6 @@ msgid ""
 "avoid wrapping when print ABS"
 msgstr ""
 
-msgid "Resolution"
-msgstr ""
-
 msgid ""
 "G-code path is genereated after simplifing the contour of model to avoid too "
 "much points and gcode lines in gcode file. Smaller value means higher "
@@ -6570,6 +6645,12 @@ msgstr ""
 msgid "The z gap between the top support interface and object"
 msgstr ""
 
+msgid "Bottom Z distance"
+msgstr ""
+
+msgid "The z gap between the bottom support interface and object"
+msgstr ""
+
 msgid ""
 "Filament to print support and skirt. 0 means no specific filament for "
 "support and current filament is used"
@@ -6638,6 +6719,12 @@ msgstr ""
 msgid "Spacing between support lines"
 msgstr ""
 
+msgid "Normal Support expansion"
+msgstr ""
+
+msgid "Expand (+) or shrink (-) the horizontal span of normal support"
+msgstr ""
+
 msgid "Speed of support"
 msgstr ""
 
@@ -6689,14 +6776,6 @@ msgid "Tree support wall loops"
 msgstr ""
 
 msgid "This setting specify the count of walls around tree support"
-msgstr ""
-
-msgid "Tree support with infill"
-msgstr ""
-
-msgid ""
-"This setting specifies whether to add infill inside large hollows of tree "
-"support"
 msgstr ""
 
 msgid "Nozzle temperature for layers after the initial one"
@@ -6844,6 +6923,18 @@ msgid "Export 3MF"
 msgstr ""
 
 msgid "Export project as 3MF."
+msgstr ""
+
+msgid "Export slicing data"
+msgstr ""
+
+msgid "Export slicing data to a folder."
+msgstr ""
+
+msgid "Load slicing data"
+msgstr ""
+
+msgid "Load cached slicing data from directory"
 msgstr ""
 
 msgid "Slice the plates: 0-all plates, i-plate i, others-invalid"
