--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-24 09:19+0800\n"
+"POT-Creation-Date: 2022-11-30 20:15+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1599,6 +1599,23 @@ msgstr ""
 "door de AMS tijdens het opstarten. De tijdens de laatste keer uitzetten "
 "opgeslagen informatie zal gebruikt worden."
 
+msgid "Update remaining capacity"
+msgstr ""
+
+msgid ""
+"The AMS will estimate Bambu filament's remaining capacity after the filament "
+"info is updated. During printing, remaining capacity will be updated "
+"automatically."
+msgstr ""
+
+msgid "AMS auto switch filament"
+msgstr ""
+
+msgid ""
+"AMS switches to the same type of filament automatically when the current "
+"filament runs out."
+msgstr ""
+
 msgid "File"
 msgstr "Bestand"
 
@@ -2179,9 +2196,6 @@ msgstr ""
 msgid "Total"
 msgstr "Totaal"
 
-msgid "Filamet"
-msgstr ""
-
 msgid "Travel"
 msgstr "Verplaatsen"
 
@@ -2454,6 +2468,21 @@ msgstr "Timelapse"
 
 msgid "Monitoring Recording"
 msgstr "Monitoring en opname"
+
+msgid "Virtual Camera"
+msgstr ""
+
+msgid "Resolution"
+msgstr "Resolutie"
+
+msgid "Show 'Streaming Video' guide page."
+msgstr ""
+
+msgid "720p"
+msgstr ""
+
+msgid "1080p"
+msgstr ""
 
 msgid "ConnectPrinter(LAN)"
 msgstr "Printer aansluiten (LAN)"
@@ -2902,11 +2931,6 @@ msgstr ""
 msgid "Information"
 msgstr ""
 
-msgid ""
-"Virtual camera is started.\n"
-"Press 'OK' to navigate the guide page of 'Streaming video of Bambu Printer'."
-msgstr ""
-
 msgid "Playing..."
 msgstr "Afspelen..."
 
@@ -3025,7 +3049,13 @@ msgstr "Wissel Y/Z assen om"
 msgid "Camera"
 msgstr ""
 
-msgid "Virtual Camera"
+msgid "SD Card"
+msgstr ""
+
+msgid "SD Card Abnormal"
+msgstr ""
+
+msgid "Camera Setting"
 msgstr ""
 
 msgid "Printing Progress"
@@ -3085,6 +3115,15 @@ msgstr "Downloaden..."
 msgid "Cloud Slicing..."
 msgstr ""
 
+msgid "Please heat the nozzle to above 170 degree before loading filament."
+msgstr ""
+
+msgid "Still unload"
+msgstr ""
+
+msgid "Still load"
+msgstr ""
+
 msgid ""
 "Cannot read filament info: the filament is loaded to the tool head,please "
 "unload the filament and try again."
@@ -3104,6 +3143,9 @@ msgstr "Sport"
 
 msgid "Ludicrous"
 msgstr "Ludicrous"
+
+msgid "Can't start this without SD card."
+msgstr ""
 
 msgid "Failed to connect to the server"
 msgstr "Verbinding maken met de server is mislukt"
@@ -3989,6 +4031,15 @@ msgstr "Voorinstelling bewerken"
 msgid "Project-inside presets"
 msgstr "Voorinstellingen binnen project"
 
+msgid "Add/Remove filaments"
+msgstr ""
+
+msgid "Add/Remove materials"
+msgstr ""
+
+msgid "Add/Remove printers"
+msgstr ""
+
 msgid "Slice all plate to obtain time and filament estimation"
 msgstr ""
 "Slice alle printbedden om een inschatting te krijgen van de printtijd en het "
@@ -4224,6 +4275,12 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
+msgid "Cannot send the print task when the printer need force upgrading."
+msgstr ""
+
+msgid "Errors"
+msgstr ""
+
 msgid ""
 "Please check the following infomation and click Confirm to continue sending "
 "print:\n"
@@ -4233,6 +4290,10 @@ msgid ""
 "The printer type used to generate G-code is not the same type as the "
 "currently selected physical printer. It is recommend to re-slice by "
 "selecting the same printer type.\n"
+msgstr ""
+
+#, c-format, boost-format
+msgid "The %s filament is too soft to be used with the AMS"
 msgstr ""
 
 msgid ""
@@ -4695,6 +4756,11 @@ msgstr "Algemeen"
 
 msgid "Capabilities"
 msgstr "Mogelijkheden"
+
+msgid ""
+"The P1P printer is not support smooth timelapse, it will not transform the "
+"timelapse changes."
+msgstr ""
 
 msgid "Show all presets (including incompatible)"
 msgstr ""
@@ -5998,6 +6064,12 @@ msgstr ""
 msgid "Hilbert Curve"
 msgstr ""
 
+msgid "Archimedean Chords"
+msgstr ""
+
+msgid "Octagram Spiral"
+msgstr ""
+
 msgid "Bottom surface pattern"
 msgstr "Bodem oppvlakte patroon"
 
@@ -6286,6 +6358,12 @@ msgstr "Honinggraad"
 
 msgid "Adaptive Cubic"
 msgstr "Adaptief kubiek"
+
+msgid "3D Honeycomb"
+msgstr ""
+
+msgid "Support Cubic"
+msgstr ""
 
 msgid "Lightning"
 msgstr ""
@@ -6807,9 +6885,6 @@ msgstr ""
 "Het object wordt verhoogd met dit aantal support lagen. Gebruik deze functie "
 "om kromtrekken te voorkomen bij het afdrukken met ABS."
 
-msgid "Resolution"
-msgstr "Resolutie"
-
 msgid ""
 "G-code path is genereated after simplifing the contour of model to avoid too "
 "much points and gcode lines in gcode file. Smaller value means higher "
@@ -7080,6 +7155,12 @@ msgid "The z gap between the top support interface and object"
 msgstr ""
 "Dit bepaald de Z-afstand tussen de bovenste support interfaces en het object."
 
+msgid "Bottom Z distance"
+msgstr ""
+
+msgid "The z gap between the bottom support interface and object"
+msgstr ""
+
 msgid ""
 "Filament to print support and skirt. 0 means no specific filament for "
 "support and current filament is used"
@@ -7160,6 +7241,12 @@ msgstr "Basis patroon afstand"
 msgid "Spacing between support lines"
 msgstr "Dit bepaald de ruimte tussen de support lijnen."
 
+msgid "Normal Support expansion"
+msgstr ""
+
+msgid "Expand (+) or shrink (-) the horizontal span of normal support"
+msgstr ""
+
 msgid "Speed of support"
 msgstr "Dit is de snelheid voor het printen van support."
 
@@ -7219,16 +7306,6 @@ msgstr "Tree support wand lussen"
 
 msgid "This setting specify the count of walls around tree support"
 msgstr "Deze instelling specificeert het aantal wanden rond de tree support."
-
-msgid "Tree support with infill"
-msgstr "Tree support met vulling"
-
-msgid ""
-"This setting specifies whether to add infill inside large hollows of tree "
-"support"
-msgstr ""
-"Deze instelling geeft aan of er opvulling moet worden toegevoegd in grote "
-"holtes van de tree support."
 
 msgid "Nozzle temperature for layers after the initial one"
 msgstr "Nozzle temperatuur voor de lagen na de eerstse laag"
@@ -7416,6 +7493,18 @@ msgstr "Exporteer 3mf"
 
 msgid "Export project as 3MF."
 msgstr "Dit exporteert het project als 3MF."
+
+msgid "Export slicing data"
+msgstr ""
+
+msgid "Export slicing data to a folder."
+msgstr ""
+
+msgid "Load slicing data"
+msgstr ""
+
+msgid "Load cached slicing data from directory"
+msgstr ""
 
 msgid "Slice the plates: 0-all plates, i-plate i, others-invalid"
 msgstr "Slice de printbedden: 0-alle printbedden, i-printbed i, andere-onjuist"
@@ -7750,6 +7839,16 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#~ msgid "Tree support with infill"
+#~ msgstr "Tree support met vulling"
+
+#~ msgid ""
+#~ "This setting specifies whether to add infill inside large hollows of tree "
+#~ "support"
+#~ msgstr ""
+#~ "Deze instelling geeft aan of er opvulling moet worden toegevoegd in grote "
+#~ "holtes van de tree support."
 
 #~ msgid ""
 #~ "\n"
